force-app/main/default/objects/Project_Task__c/Project_Task__c.object-meta.xml
<CustomObject>
    <description>Task used for multi-step Ubiquity projects and processes.   Pre-determined/scheduled by teams using Object &quot;X&quot;</description>
    <label>Project Task</label>
    <nameField>
        <label>Project Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>