force-app/main/default/objects/Project_Task__c/fields/Actual_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Completion_Date__c</fullName>
    <description>When work on the task was completed</description>
    <inlineHelpText>When work on the task was completed</inlineHelpText>
    <label>Actual Completion Date</label>
    <type>DateTime</type>
</CustomField>