force-app/main/default/objects/Project_Task__c/fields/Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Date__c</fullName>
    <description>When work started on the task</description>
    <inlineHelpText>When work started on the task</inlineHelpText>
    <label>Actual Start Date</label>
    <type>DateTime</type>
</CustomField>