force-app/main/default/objects/Project_Task__c/fields/Add_On_Product__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add-On Product</label>
    <referenceTo>Add_On_Products__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>