force-app/main/default/objects/Project_Task__c/fields/Add_On_Product_Status__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Product_Status__c</fullName>
    <formula>TEXT(Add_On_Product__r.Product_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Add-On Product Status</label>
    <type>Text</type>
</CustomField>