force-app/main/default/objects/Project_Task__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF(Completed__c = TRUE, DATETIMEVALUE(Actual_Completion_Date__c) - CreatedDate, DATETIMEVALUE(TODAY()) - CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>