force-app/main/default/objects/Project_Task__c/fields/Case_Upon_Creation__c.field-meta.xml
<CustomField>
    <fullName>Case_Upon_Creation__c</fullName>
    <formula>Project_Deliverable__r.Case_Upon_Creation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Upon Creation</label>
    <type>Checkbox</type>
</CustomField>