force-app/main/default/objects/Project_Task__c/fields/Closed_via_Button__c.field-meta.xml
<CustomField>
    <fullName>Closed_via_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed via Button</label>
    <type>Checkbox</type>
</CustomField>