force-app/main/default/objects/Project_Task__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <description>Used to show and give count on completed project tasks.</description>
    <formula>ISBLANK( Actual_Completion_Date__c) = False</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to show and give count on completed project tasks.</inlineHelpText>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>