force-app/main/default/objects/Project_Task__c/fields/Completion_Order__c.field-meta.xml
<CustomField>
    <fullName>Completion_Order__c</fullName>
    <label>Completion Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>