force-app/main/default/objects/Project_Task__c/fields/Connected_Case__c.field-meta.xml
<CustomField>
    <fullName>Connected_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connected Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>