force-app/main/default/objects/Project_Task__c/fields/Creation_Point__c.field-meta.xml
<CustomField>
    <fullName>Creation_Point__c</fullName>
    <formula>TEXT( Project_Deliverable__r.Creation_Point__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creation Point</label>
    <type>Text</type>
</CustomField>