force-app/main/default/objects/Project_Task__c/fields/Days_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Complete__c</fullName>
    <description>Business days remaining for SLA attainment</description>
    <formula>5 * ( FLOOR( ( DATEVALUE(CreatedDate + Project_Deliverable__r.SLA__c ) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(
DATEVALUE(CreatedDate + Project_Deliverable__r.SLA__c) - DATE( 1900, 1, 8), 7 ) ) 
-
(5 * ( FLOOR( ( DATEVALUE( CreatedDate ) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(
DATEVALUE(CreatedDate) - DATE( 1900, 1, 8), 7 ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Business days remaining for SLA attainment</inlineHelpText>
    <label>Days to Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>