force-app/main/default/objects/Project_Task__c/fields/Declined_Reason__c.field-meta.xml
<CustomField>
    <fullName>Declined_Reason__c</fullName>
    <label>Declined Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Phase II Implementations</fullName>
            </value>
            <value>
                <fullName>Self Start</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>