force-app/main/default/objects/Project_Task__c/fields/Docs_Signed_for_PRKS__c.field-meta.xml
<CustomField>
    <fullName>Docs_Signed_for_PRKS__c</fullName>
    <description>Check to see if docs are signed for PRKS team to begin tasks</description>
    <formula>IF(Add_On_Product__r.Account__r.Docs_Signed_for_PRKS__c = TRUE, TRUE, 
IF (Opportunity__r.Account.Docs_Signed_for_PRKS__c = TRUE, TRUE, FALSE))

||

ISBLANK( Opportunity__r.Implementation__c )</formula>
    <inlineHelpText>Check to see if docs are signed for PRKS team to begin tasks</inlineHelpText>
    <label>Docs Signed for PRKS</label>
    <type>Checkbox</type>
</CustomField>