force-app/main/default/objects/Project_Task__c/fields/Eligible_for_Reassignment__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Reassignment__c</fullName>
    <formula>Project_Deliverable__r.Assign_to_Current_Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible for Reassignment</label>
    <type>Checkbox</type>
</CustomField>