force-app/main/default/objects/Project_Task__c/fields/Expected_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Completion_Date__c</fullName>
    <description>Based on template timelines for each Implementation</description>
    <inlineHelpText>Based on template timelines for each Implementation</inlineHelpText>
    <label>Expected Completion Date</label>
    <type>DateTime</type>
</CustomField>