force-app/main/default/objects/Project_Task__c/fields/Expected_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Start_Date__c</fullName>
    <description>Based on template timelines for each Implementation</description>
    <inlineHelpText>Based on template timelines for each Implementation of the</inlineHelpText>
    <label>Expected Start Date</label>
    <type>DateTime</type>
</CustomField>