force-app/main/default/objects/Project_Task__c/fields/Imp_Flag__c.field-meta.xml
<CustomField>
    <fullName>Imp_Flag__c</fullName>
    <description>Report version of Progress Tracker to use on Implementation Project Tasks List Views</description>
    <formula>TEXT(Implementation__r.Progress_Tracker_Report__c)</formula>
    <inlineHelpText>Report version of Progress Tracker to use on Implementation Project Tasks List Views</inlineHelpText>
    <label>Imp Flag</label>
    <type>Text</type>
</CustomField>