force-app/main/default/objects/Project_Task__c/fields/Implementation_Dashboard_Link__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Dashboard_Link__c</fullName>
    <description>Link to Implementation Dashboard from related Imp record.</description>
    <formula>Implementation__r.Implementation_Dashboard_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link to Implementation Dashboard from related Imp record.</inlineHelpText>
    <label>Implementation Dashboard Link</label>
    <type>Text</type>
</CustomField>