force-app/main/default/objects/Project_Task__c/fields/Implementation_Id__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Id__c</fullName>
    <formula>Implementation__r.Implementation_ID_18_Char__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Id</label>
    <type>Text</type>
</CustomField>