force-app/main/default/objects/Project_Task__c/fields/Included_in_Non_Linear_Group__c.field-meta.xml
<CustomField>
    <fullName>Included_in_Non_Linear_Group__c</fullName>
    <formula>IF(ISBLANK(Project_Deliverable__r.Non_Linear_Progression_Group__c), &quot;No&quot;, &quot;Yes&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Included in Non-Linear Group</label>
    <type>Text</type>
</CustomField>