force-app/main/default/objects/Project_Task__c/fields/KPI_Milestone__c.field-meta.xml
<CustomField>
    <fullName>KPI_Milestone__c</fullName>
    <label>KPI Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sign Plan Documents</fullName>
            </value>
            <value>
                <fullName>Set Up Account Number</fullName>
            </value>
            <value>
                <fullName>Upload Census</fullName>
            </value>
            <value>
                <fullName>Upload Payroll</fullName>
            </value>
            <value>
                <fullName>Time to Plan Review</fullName>
            </value>
            <value>
                <fullName>Time to Account #</fullName>
            </value>
            <value>
                <fullName>Time to Assets &amp; Reporting</fullName>
            </value>
            <value>
                <fullName>Time to Census</fullName>
            </value>
            <value>
                <fullName>Time to Payroll</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>