force-app/main/default/objects/Project_Task__c/fields/Liquidation_Date__c.field-meta.xml
<CustomField>
    <fullName>Liquidation_Date__c</fullName>
    <formula>Transition__r.Liquidation_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Liquidation Date</label>
    <type>Date</type>
</CustomField>