force-app/main/default/objects/Project_Task__c/fields/Non_Linear_Progression_Group__c.field-meta.xml
<CustomField>
    <fullName>Non_Linear_Progression_Group__c</fullName>
    <formula>Project_Deliverable__r.Non_Linear_Progression_Group__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non-Linear Progression Group</label>
    <type>Text</type>
</CustomField>