force-app/main/default/objects/Project_Task__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>Used to automate task changes</description>
    <inlineHelpText>Used to automate task changes</inlineHelpText>
    <label>Order Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>