force-app/main/default/objects/Project_Task__c/fields/Paradigm_Company_URL__c.field-meta.xml
<CustomField>
    <fullName>Paradigm_Company_URL__c</fullName>
    <description>Copy of Paradigm Company Link from Implementation</description>
    <formula>Implementation__r.Paradigm_Company_Link__c</formula>
    <inlineHelpText>Copy of Paradigm Company Link from Implementation</inlineHelpText>
    <label>Paradigm Company URL</label>
    <type>Text</type>
</CustomField>