force-app/main/default/objects/Project_Task__c/fields/Picklist_Population_on_Completion__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Population_on_Completion__c</fullName>
    <formula>IF( ISBLANK(Project_Deliverable__r.Picklist_Completion_Value__c), false, true )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Picklist Population on Completion</label>
    <type>Checkbox</type>
</CustomField>