force-app/main/default/objects/Project_Task__c/fields/Project_Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Project_Deliverable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Deliverable</label>
    <referenceTo>Project_Deliverables__c</referenceTo>
    <relationshipLabel>Live Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>