force-app/main/default/objects/Project_Task__c/fields/Project_Task_ID_18_Char__c.field-meta.xml
<CustomField>
    <fullName>Project_Task_ID_18_Char__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Task ID (18 Char)</label>
    <type>Text</type>
</CustomField>