force-app/main/default/objects/Project_Task__c/fields/Responsible_Party__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Party__c</fullName>
    <description>Used to report on time each party took on tasks during Implementation</description>
    <inlineHelpText>Used to report on time each party took on tasks during Implementation</inlineHelpText>
    <label>Responsible Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accounting &amp; Finance</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Client Support</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Custodian</fullName>
            </value>
            <value>
                <fullName>Distributions</fullName>
            </value>
            <value>
                <fullName>Implementations</fullName>
            </value>
            <value>
                <fullName>Implementations Manager</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Payroll (K)oncierge</fullName>
            </value>
            <value>
                <fullName>Prior Provider</fullName>
            </value>
            <value>
                <fullName>Sponsor</fullName>
            </value>
            <value>
                <fullName>Transitions</fullName>
            </value>
            <value>
                <fullName>UBQT Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>