force-app/main/default/objects/Project_Task__c/fields/Service_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Plan_Type__c</fullName>
    <description>Service Option &amp; Plan Type from Implementation</description>
    <formula>TEXT(Implementation__r.Service_Option__c) &amp; &quot; &quot; &amp; TEXT(Implementation__r.Plan_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Service Option &amp; Plan Type from Implementation</inlineHelpText>
    <label>Service/Plan Type</label>
    <type>Text</type>
</CustomField>