force-app/main/default/objects/Project_Task__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <formula>TEXT(Project_Deliverable__r.Skill__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skill</label>
    <type>Text</type>
</CustomField>