force-app/main/default/objects/Project_Task__c/fields/SLA_Completion__c.field-meta.xml
<CustomField>
    <fullName>SLA_Completion__c</fullName>
    <description>Checks time to complete of project task vs SLA for project task deliverable.</description>
    <formula>IF( ISPICKVAL(Status__c, &quot;Completed&quot;) &amp;&amp; Time_to_Complete_1__c  &lt;=  Project_Deliverable__r.SLA__c,True,False)</formula>
    <inlineHelpText>Checks time to complete of project task vs SLA for project task deliverable.</inlineHelpText>
    <label>SLA Completion</label>
    <type>Checkbox</type>
</CustomField>