force-app/main/default/objects/Project_Task__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <label>Team Member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aaron Fekete</fullName>
            </value>
            <value>
                <fullName>Brian Britt</fullName>
            </value>
            <value>
                <fullName>Estee Hayes</fullName>
            </value>
            <value>
                <fullName>Patricia Parisi</fullName>
            </value>
            <value>
                <fullName>Stormy Bearry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>