force-app/main/default/objects/Project_Task__c/fields/Time_to_Complete_1__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Complete_1__c</fullName>
    <description>Calculates difference between dates excluding weekends.</description>
    <formula>(5 * ( FLOOR( (  DATEVALUE(Actual_Completion_Date__c)  - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(
 DATEVALUE(Actual_Completion_Date__c)  - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( (  DATEVALUE(Actual_Start_Date__c)  - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(
 DATEVALUE(Actual_Start_Date__c)  - DATE( 1900, 1, 8), 7 ) ) )</formula>
    <inlineHelpText>Calculates difference between dates excluding weekends.</inlineHelpText>
    <label>Time to Complete 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>