force-app/main/default/objects/Project_Task__c/fields/Time_To_Complete__c.field-meta.xml
<CustomField>
    <fullName>Time_To_Complete__c</fullName>
    <description>Measured in Days</description>
    <formula>Actual_Completion_Date__c - Actual_Start_Date__c</formula>
    <inlineHelpText>Measured in Days</inlineHelpText>
    <label>Time To Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>