force-app/main/default/objects/Project_Task__c/fields/Transition__c.field-meta.xml
<CustomField>
    <fullName>Transition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transition</label>
    <referenceTo>Transition__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>