force-app/main/default/objects/Project_Task__c/fields/Work_Breakdown_Structure__c.field-meta.xml
<CustomField>
    <fullName>Work_Breakdown_Structure__c</fullName>
    <formula>Project_Deliverable__r.Work_Breakdown_Structure__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Breakdown Structure</label>
    <type>Text</type>
</CustomField>