force-app/main/default/objects/Project_Task__c/recordTypes/Implementation_Task.recordType-meta.xml
<RecordType>
    <fullName>Implementation_Task</fullName>
    <active>true</active>
    <label>Implementation Task</label>
</RecordType>