force-app/main/default/objects/Project_Task__c/recordTypes/Transition_Task.recordType-meta.xml
<RecordType>
    <fullName>Transition_Task</fullName>
    <active>true</active>
    <label>Transition Task</label>
</RecordType>