force-app/main/default/objects/Project_Task__c/validationRules/Completion_Date_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Completion_Date_Needed</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL( Actual_Completion_Date__c ) &amp;&amp;
(ISPICKVAL( Status__c, &quot;Not Needed&quot;) ||
ISPICKVAL( Status__c, &quot;Declined&quot;) ||
ISPICKVAL( Status__c, &quot;Completed&quot;))</errorConditionFormula>
    <errorMessage>Please enter an Actual Completion Date</errorMessage>
</ValidationRule>