force-app/main/default/objects/Project_Task__c/validationRules/Completion_Status_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Completion_Status_Needed</fullName>
    <active>false</active>
    <errorConditionFormula>(NOT(ISNULL( Actual_Completion_Date__c ) ) &amp;&amp;
ISPICKVAL( Status__c, &quot;Ready&quot;)) ||
(NOT(ISNULL( Actual_Completion_Date__c ) ) &amp;&amp;
ISPICKVAL( Status__c, &quot;In Progress&quot;))</errorConditionFormula>
    <errorMessage>Please change Status to &quot;Completed&quot;</errorMessage>
</ValidationRule>