force-app/main/default/objects/Project_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Actual_Start_Date__c</columns>
    <columns>Actual_Completion_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Order_Number__c</columns>
    <columns>Expected_Start_Date__c</columns>
    <columns>Expected_Completion_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Opportunity__c</columns>
    <columns>Team_Member__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_To__c</field>
        <operation>contains</operation>
        <value>Payroll</value>
    </filters>
    <label>All</label>
</ListView>