force-app/main/default/objects/Project_Task__c/listViews/Copy_of_Payroll_K_oncierge_Tasks.listView-meta.xml
<ListView>
    <fullName>Copy_of_Payroll_K_oncierge_Tasks</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Actual_Start_Date__c</columns>
    <columns>Actual_Completion_Date__c</columns>
    <columns>KPI_Milestone__c</columns>
    <columns>Responsible_Party__c</columns>
    <columns>Order_Number__c</columns>
    <columns>Implementation__c</columns>
    <columns>Implementation_Stage__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ready,In Progress</value>
    </filters>
    <filters>
        <field>Assigned_To__c</field>
        <operation>contains</operation>
        <value>Payroll</value>
    </filters>
    <filters>
        <field>Implementation_Stage__c</field>
        <operation>contains</operation>
        <value>In Progress</value>
    </filters>
    <filters>
        <field>Implementation__c</field>
        <operation>contains</operation>
        <value>decimal demo</value>
    </filters>
    <label>Payroll (K)oncierge Tasks - Demo</label>
</ListView>