force-app/main/default/objects/Project_Task__c/listViews/CST_Implementations.listView-meta.xml
<ListView>
    <fullName>CST_Implementations</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Actual_Start_Date__c</columns>
    <columns>Actual_Completion_Date__c</columns>
    <columns>KPI_Milestone__c</columns>
    <columns>Responsible_Party__c</columns>
    <columns>Order_Number__c</columns>
    <columns>Implementation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ready,In Progress</value>
    </filters>
    <filters>
        <field>Implementation_Stage__c</field>
        <operation>contains</operation>
        <value>In Progress</value>
    </filters>
    <filters>
        <field>Assigned_To__c</field>
        <operation>notContain</operation>
        <value>Samantha</value>
    </filters>
    <label>CST Implementations</label>
    <sharedTo>
        <group>BI_Team</group>
        <group>CSTs_ALL</group>
    </sharedTo>
</ListView>