force-app/main/default/objects/Project_Task__c/listViews/Simply_Implementation_Tasks.listView-meta.xml
<ListView>
    <fullName>Simply_Implementation_Tasks</fullName>
    <columns>Imp_Flag__c</columns>
    <columns>NAME</columns>
    <columns>Paradigm_Company_URL__c</columns>
    <columns>Status__c</columns>
    <columns>Actual_Start_Date__c</columns>
    <columns>Actual_Completion_Date__c</columns>
    <columns>KPI_Milestone__c</columns>
    <columns>Responsible_Party__c</columns>
    <columns>Order_Number__c</columns>
    <columns>Implementation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Work_Breakdown_Structure__c</field>
        <operation>contains</operation>
        <value>Simply</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ready,In Progress</value>
    </filters>
    <filters>
        <field>Implementation_Stage__c</field>
        <operation>contains</operation>
        <value>In Progress</value>
    </filters>
    <label>Simply Implementation Tasks</label>
</ListView>